--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,55 +3,15 @@
     src: local("Gill Sans Bold");
     src: url('../fonts/Gill Sans Bold.otf');
 }
-
 @font-face {
     font-family: 'Gill Sans Medium';
     src: local("Gill Sans Medium");
     src: url('../fonts/Gill Sans Medium.otf');
-
 }
-
-
-
 .body {
     margin: 0;
-    /*font-family: "Gill Sans Bold";*/
+    font-family: "Gill Sans Bold";
 }
-
-.header {
-    color: black;
-    display: flex;
-    height: 240px;
-    align-items: center;
-    justify-content: space-between;
-    font-family: "Gill Sans Medium";
-    font-size: 15px;
-
-
-}
-
-header a {
-    color: black;
-    text-decoration: none;
-    height: inherit;
-    display: flex;
-    align-items: center;
-    padding: 0 100px;
-}
-
-.menu {
-    height: inherit;
-}
-
-.header ol {
-    display: flex;
-    height: inherit;
-}
-
-.header ol li{
-    height: inherit;
-}
-
 .container {
     /*border: 1px solid red;*/
     width: 100%;
@@ -63,70 +23,23 @@ header a {
     /*margin: 0px 46px 0px 46px;*/
     margin: 0 auto;
 }
-
-/*.container-form {*/
-/*    border: 1px solid red;*/
-/*    width: 100%;*/
-/*    display: inherit;*/
-/*    height: inherit;*/
-/*    align-items: inherit;*/
-/*    justify-content: inherit;*/
-/*    flex-wrap: inherit;*/
-/*    margin: 0 auto;*/
-/*}*/
-
 ol,
 ul {
     margin: 0;
     padding: 0;
     list-style: none;
 }
-
 .flexbox {
     display: flex;
     /* flex-wrap: nowrap; */
     flex-wrap: wrap;
 }
-
 .figure {
     margin: 0;
 }
-
-.hero {
-    height: 560px;
-    /*background-image: url('../images/pexels-karolina-grabowska-4968391.png');*/
-    background-color: #eac24b;
-    /*background-size: 980px 560px;*/
-    /*background-repeat: no-repeat;*/
-    /*background-position-x: right;*/
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0px 46px 0px 46px;
-}
-
-.hero-image {
-    height: 560px;
-    width: 980px;
-}
-
-.button-email {
-    border-radius: 8px;
-    color: #eac24b;
-    background-color: black;
-    border:none;
-    cursor:pointer;
-    width: 190px;
-    height: 70px;
-    font-size: 35px;
-    position: absolute;
-    margin-left: 15px;
-}
-
 .imageContainer {
     margin-left: 1030px;
 }
-
 .project {
     padding: 20px;
     background: white;
@@ -134,7 +47,6 @@ ul {
     align-items: center;
     justify-content: space-between;
 }
-
 .content-description {
     float: left;
     margin-left: 400px;
@@ -142,7 +54,6 @@ ul {
     font-family: "Gill Sans Medium";
     text-align: end;
 }
-
 .button-img {
     border-radius: 8px;
     color: #eac24b;
@@ -154,81 +65,24 @@ ul {
     font-size: 35px;
     /*position: absolute;*/
 }
-
 .hero-coupons-title {
     text-align: center;
     font-size: 64px;
     font-family: "Gill Sans Medium";
     /*margin-right: 1em;*/
 }
-
 .flex-container {
     display: flex;
     width: 100%;
     height: 100px;
     align-content: center;
 }
-
 .flex-item {
     width: 40%;
     height: 100px;
     margin: 10px;
     order: 1;
 }
-
-{
-    box-sizing: border-box;
-}
-
-.columns {
-    width: 17em;
-    padding: 1em;
-}
-
-.price {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    -webkit-transition: 0.3s;
-    transition: 0.3s;
-    border-radius: 25px;
-    background-color: #e8e8e8;
-    font-family: "Gill Sans Medium";
-
-}
-
-.price:hover {
-    box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2)
-}
-
-.price .plan {
-    /*background-color: #e8e8e8;*/
-    font-size: 25px;
-    text-align: justify;
-    margin-left: 35px;
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
-    font-family: "Gill Sans Medium";
-}
-
-.price-tag {
-    text-align: justify;
-    margin-left: 35px;
-    font-family: "Gill Sans Medium";
-}
-
-.price li {
-    padding: 10px;
-}
-
-.price .grey {
-    /*background-color: #eee;*/
-    font-size: 20px;
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px;
-    margin-left: 2em;
-}
-
 .button {
     background-color: #4CAF50;
     border: none;
@@ -238,29 +92,20 @@ ul {
     text-decoration: none;
     font-size: 18px;
 }
-
-.container-plan {
-    display: flex;
-    justify-content: center;
-}
-
 .footer {
     background-color: #edc34d;
     display: flex;
     justify-content: space-between;
 }
-
 .bank_icons {
     margin-top: auto;
     margin-right: 20px;
     margin-bottom: 10px;
 }
-
 .footer_image_container {
     padding-left: 5em;
     padding-top: 5em;
 }
-
 .hero-description {
     text-align: justify;
     margin-left: 43em;
@@ -269,40 +114,316 @@ ul {
     font-family: "Gill Sans Medium";
     font-weight: normal;
 }
-
 .plan-text {
     text-align: justify;
     margin-left: 35px;
     color: white;
 }
-
 .form-email-text {
     font-family: "Gill Sans Bold";
     font-weight: normal;
 }
-
 .footer-text {
     font-family: "Gill Sans Medium";
     font-size: 20px;
     font-weight: normal;
 }
-
 .copyright-text {
     font-family: "Gill Sans Medium";
     font-weight: normal;
 }
-
-.container-plans {
+/* Header */
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+header img{
+    padding: 17px 30px 17px 50px;
+}
+.header_items a{
+    margin: 0 10px;
+    color: gray;
+    padding: 2em;
+    text-decoration: none;
+}
+.header_items{
+    display: flex;
+    padding: 0 30px;
+}
+.burguer-button{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: rgba(0,0,0,0.8);
+    display: none;
+    line-height: 40px;
+    text-align: center;
+    position: fixed;
+    z-index: 4;
+    right: 5px;
+    color: white;
+    cursor: pointer;
+}
+.menu_movile{
+    display: none;
+}
+/* Plans */
+.container_plan_card{
+    padding: 2em;
+    border-radius: 25px;
+    background-color: #e8e8e8;
+    margin: 2em 2em;
+    width: 18em;
+}
+.container_plan_price_type h3, .container_plan_price_type h4{
+    margin: 0;
+}
+.container_plan_price_type h4{
+    font-size: 2em;
+}
+.container_plan_price_type h3{
+    margin-top: 12px;
+}
+.container_plan_price_type {
+    padding: 0 1em;
+}
+.plans-button{
+    padding: 2em 0 0 0;
+    text-align: center;
+}
+.container-plan{
+    display: flex;
+    justify-content: center;
+}
+.class-container_plan_description{
+    font-size: 1.3em;
+}
+.class-container_plan_description p {
+    margin: 2em 0em;
+}
+/* Designs */
+.designs{
+}
+.design_container{
+    padding: 4em 0;
+    display: flex;
+    justify-content: center;
+}
+.design_title_text{
+    font-size: 3em;
+    text-align: right;
+}
+.design_title {
+    width: 30%;
+    padding: 0 7em;
+}
+/* Ads */
+.disclaimer_container {
+    padding: 4em;
+}
+.disclaimer_title_container {
+    font-size: 2em;
+}
+.disclaimer_description{
+    margin: 0;
+    font-size: 1.4em;
     text-align: justify;
-    margin-left: 35px;
 }
 
 
-@media only screen and (max-width: 600px) {
-    .columns {
-        width: 100%;
+
+.disclaimer_title {
+    margin: 0;
+    text-align: center;
+    font-size: 64px;
+    font-family: "Gill Sans Medium";
+}
+/* Esto se debe quitar con el slider */
+.design_slider{
+    display: flex;
+}
+/* Hero */
+.hero_container{
+    display: flex;
+    justify-content: end;
+}
+.hero-image {
+    width: 100%;
+    height: 100%;
+}
+.hero_container_form{
+    width: 50%;
+    padding: 3em 1em;
+    align-items: center;
+    display: flex;
+}
+.hero_container_form input{
+    border-radius: 8px;
+    border:none;
+    padding-left: 34px;
+    width: 100%;
+    height: 70px;
+    font-size: 35px;
+}
+.button-email {
+    border-radius: 8px;
+    color: #eac24b;
+    background-color: black;
+    border:none;
+    cursor:pointer;
+    height: 70px;
+    font-size: 35px;
+    margin-left: 15px;
+}
+.hero {
+    height: 100%;
+    background-color: #eac24b;
+}
+.hero_container_inputs{
+    display: flex;
+}
+
+.bank_icons_responsive {
+    display: none;
+}
+
+@media screen and (max-width: 768px){
+    .bank_icons_responsive {
+        display: revert;
+    }
+    .bank_icons {
+        display: none;
+    }
+    .class-container_plan_description {
+        font-size: 1em;
+    }
+    .container_plan_card{
+        padding: 1em;
+    }
+    .hero_container{
+        flex-direction: column-reverse;
+    }
+    .hero_container_form {
+        width: 94%;
+        padding: 2em 0;
+    }
+
+    .burguer-button{
+        display: block;
+    }
+    .header_items{
+        display: none;
+    }
+    .menu_movile{
+        position: fixed;
+        background-color: #eac24b;
+        z-index: 3;
+        width: 100vw;
+        left: -100vw;
+        bottom: 0%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: .5s;
+        text-align: center;
+        height: 100vh;
+        opacity: 0.9;
+    }
+    .menu_movile.is_active{
+        left: 0;
+        height: 100vh;
+    }
+    .menu_movile li{
+        text-decoration: none;
+        list-style: none;
+        color: white;
+        font-size: 2em;
+        padding: 0.3em;
+        font-weight: lighter;
+    }
+    .burger_inicio {
+        text-decoration: none;
+    }
+    .burger_func {
+        text-decoration: none;
+    }
+    .burger_plan {
+        text-decoration: none;
+    }
+    .burger_contact {
+        text-decoration: none;
+    }
+
+    .bank_icons_responsive {
+        display: none;
     }
 }
 
+@media screen and (max-width: 767px){
+    .container-plan{
+        display: block;
+        justify-content: center;
+    }
+    .container_plan_card{
+        margin: 2em 0;
+        width: 86%;
+    }
+    .hero_container{
+        flex-direction: column-reverse;
+    }
+    .hero_container_form {
+        width: 94%;
+        padding: 2em 0;
+    }
+    .burguer-button{
+        display: block;
+    }
+    .header_items{
+        display: none;
+    }
+    .menu_movile{
+        position: fixed;
+        background-color: #eac24b;
+        z-index: 3;
+        width: 100vw;
+        left: -100vw;
+        bottom: 0%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: .5s;
+        text-align: center;
+        height: 100vh;
+        opacity: 0.9;
+    }
+    .menu_movile.is_active{
+        left: 0;
+        height: 100vh;
+    }
+    .menu_movile li{
+        text-decoration: none;
+        list-style: none;
+        color: white;
+        font-size: 2em;
+        padding: 0.3em;
+        font-weight: lighter;
+    }
+    .burger_inicio {
+        text-decoration: none;
+    }
+    .burger_func {
+        text-decoration: none;
+    }
+    .burger_plan {
+        text-decoration: none;
+    }
+    .burger_contact {
+        text-decoration: none;
+    }
 
+    .bank_icons_responsive {
+        margin: 0 0.3em;
+    }
 
+}
